--- a/_sass/_layout/_bagels.scss
+++ b/_sass/_layout/_bagels.scss
@@ -14,7 +14,7 @@
   -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   margin-top: 1rem;
-  margin-bottom: 4rem;
+  margin-bottom: 2rem;
 
 }
 
@@ -38,7 +38,7 @@
 }
 
 .bagels__wrapper {
-  padding: 4rem;
+  padding: 2.5rem;
 
   &:hover {
     transform: scale(1.05);
@@ -48,7 +48,7 @@
 }
 
 .bagels__image {
-  max-height: 25rem;
+  max-height: 15rem;
   display: block;
   margin-left: auto;
   margin-right: auto;
